--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   dio: ^4.0.6
   fluttertoast: ^8.1.2
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
