--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   dio: ^4.0.6
   fluttertoast: ^8.1.2
   shared_preferences:
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  cloud_firestore: ^4.3.1
 
 dev_dependencies:
   flutter_test:
