--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
+  image_picker: ^0.8.6+1
+  path: ^1.8.2
+  share_plus: ^6.3.1
+  file_picker: ^5.2.5
 
 dev_dependencies:
   flutter_test:
