--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,12 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/gp-logo.png
+    - assets/SignUp.png
+    - assets/Home_background.png
+    - assets/Header.png
+    - assets/ana.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
