--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   path: ^1.8.2
   share_plus: ^6.3.1
   file_picker: ^5.2.5
+  avatar_glow: ^2.0.2
+  speech_to_text: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -82,7 +84,7 @@ flutter:
     - assets/SignUp.png
     - assets/Home_background.png
     - assets/Header.png
-    - assets/ana.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
