--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,19 +29,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  bloc: ^8.1.0
-  cloud_firestore: ^4.3.1
-  conditional_builder_null_safety: ^0.0.6
   cupertino_icons: ^1.0.5
-  dio: ^5.1.2
-  file_picker: ^5.2.5
-  firebase_auth: ^4.2.5
-  firebase_core: ^2.4.1
-  firebase_storage: ^11.2.0
-  flutter:
-    sdk: flutter
+  conditional_builder_null_safety: ^0.0.6
+  bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  dio: ^4.0.6
   fluttertoast: ^8.1.2
+  shared_preferences:
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  cloud_firestore: ^4.3.1
   image_picker: ^0.8.6+1
   path: ^1.8.2
   share_plus: ^6.3.1
