--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   chat_gpt_sdk: ^2.0.0
   flutter_tts: ^3.7.0
   google_fonts: ^4.0.4
+  videosdk: ^1.1.3
+  flutter_vlc_player: ^7.2.0
 
 
 dev_dependencies:
