--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_fonts: ^4.0.4
   videosdk: ^1.1.3
   flutter_vlc_player: ^7.2.0
+  google_ml_kit: ^0.7.3
 
 
 dev_dependencies:
