--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         android:label="graduation_project"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBXumvpBpk-ZPRF0zY62ErVGSbV-2B98zQ"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
