--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   geolocator: ^7.6.0 
   awesome_dialog: ^3.1.0
   geocoding: ^2.1.0
+  
 
 
   
@@ -79,6 +80,17 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
+
+
+  flutter_launcher_icons: "^0.13.1"
+ 
+  
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/gp-logo.png"
+  
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
